--- a/Todo/Views/TodoItem/Create.cshtml
+++ b/Todo/Views/TodoItem/Create.cshtml
@@ -46,6 +46,12 @@
                     new {@class="form-control"}
                     )
                 <span asp-validation-for="ResponsiblePartyId" class="text-danger"></span>
+            </div>            
+            
+            <div class="form-group">
+                <label asp-for="Rank"></label>
+                <input asp-for="Rank" class="form-control" />
+                <span asp-validation-for="Rank" class="text-danger"></span>
             </div>
 
             <div class="form-group">
