--- a/Todo/wwwroot/css/site.css
+++ b/Todo/wwwroot/css/site.css
@@ -28,6 +28,14 @@ body {
     margin: 15px;
 }
 
+.nav .gravatar-name {
+    margin-left: 10px;
+}
+
+.list-group .gravatar-name {
+    margin-left: 5px;
+}
+
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
