Task 9: js-based UI for adding to-do items without navigating away from the details page + underlying API

--- a/Todo/Views/Shared/_LoginPartial.cshtml
+++ b/Todo/Views/Shared/_LoginPartial.cshtml
@@ -19,7 +19,7 @@
                     }
 
                     <img src="https://www.gravatar.com/avatar/@(Gravatar.GetHash(UserManager.GetUserName(User)))?s=30" alt="avatar" />
-                    @UserManager.GetUserName(User) <span class="gravatar-name" data-gravatar-hash="@Gravatar.GetHash(UserManager.GetUserName(User))" style="display:none"></span>
+                    @UserManager.GetUserName(User) <span class="gravatar-name hide" data-gravatar-hash="@Gravatar.GetHash(UserManager.GetUserName(User))"></span>
                 </a>
             </li>
             <li>
